--- a/Resources/Prototypes/Nyanotrasen/Species/moth.yml
+++ b/Resources/Prototypes/Nyanotrasen/Species/moth.yml
@@ -1,6 +1,6 @@
 - type: species
   id: Moth
-  name: species-name-moth
+  name: Моль
   roundStart: true
   prototype: MobMoth
   sprites: MobMothSprites
