--- a/Resources/Prototypes/Species/dwarf.yml
+++ b/Resources/Prototypes/Species/dwarf.yml
@@ -1,7 +1,7 @@
 - type: species
   id: Dwarf
-  name: species-name-dwarf
-  roundStart: false # Funny but pointless
+  name: Дворф
+  roundStart: true # Funny but pointless
   prototype: MobDwarf
   sprites: MobHumanSprites
   markingLimits: MobHumanMarkingLimits
