--- a/Resources/Prototypes/Species/skeleton.yml
+++ b/Resources/Prototypes/Species/skeleton.yml
@@ -1,7 +1,7 @@
 - type: species
   id: Skeleton
-  name: Skeleton
-  roundStart: false
+  name: Скелет
+  roundStart: true
   prototype: MobSkeletonPerson
   sprites: MobSkeletonSprites
   markingLimits: MobHumanMarkingLimits
