--- a/Resources/Prototypes/Entities/Clothing/Ears/headsets.yml
+++ b/Resources/Prototypes/Entities/Clothing/Ears/headsets.yml
@@ -70,6 +70,7 @@
       key_slots:
       - EncryptionKeyCargo
       - EncryptionKeyCommon
+      - EncryptionKeyCommand
 
 - type: entity
   parent: ClothingHeadset
