--- a/Resources/Prototypes/Roles/Jobs/Cargo/quartermaster.yml
+++ b/Resources/Prototypes/Roles/Jobs/Cargo/quartermaster.yml
@@ -9,6 +9,7 @@
   access:
   - Cargo
   - Maintenance
+  - Command
   - External #should be removed once all maps update for no cargo shuttle
 
 - type: startingGear
